--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     tools:context=".MainActivity">
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -21,7 +22,7 @@
             android:textSize="30dp" />
 
         <EditText
-            android:id="@+id/Name"
+            android:id="@+id/NameOfUser"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:hint="@string/enter_your_name"
@@ -35,10 +36,11 @@
             android:textSize="48dp" />
 
         <EditText
+            android:id="@+id/AgeOfUser"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:hint="@string/enter_your_age"
-            android:inputType="number"/>
+            android:inputType="number" />
 
 
         <LinearLayout
@@ -49,13 +51,30 @@
         </LinearLayout>
 
         <Button
+            android:id="@+id/btnSubmit"
             android:layout_width="398dp"
             android:layout_height="50dp"
             android:scrollHorizontally="true"
-            android:text="@string/submit"
-            android:id="@+id/btnSubmit"/>
+            android:text="@string/submit" />
+
+        <Button
+            android:id="@+id/btnNext"
+            android:layout_width="384dp"
+            android:layout_height="50dp"
+            android:scrollHorizontally="true"
+            android:text="@string/next" />
 
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="131dp"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="@+id/linearLayout">
+
+    </LinearLayout>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
